trying to fix searchbar on mobile again

--- a/src/style.css
+++ b/src/style.css
@@ -43,7 +43,7 @@ p {
   align-items: center;
 }
 .searchForm {
-  width: 300px;
+  max-width: 300px;
 }
 .form-control {
   display: inline-block;
